Fix zoomed picture placement & pic control icon display issues on small screens

--- a/public/css/chasingshadows.css
+++ b/public/css/chasingshadows.css
@@ -16,7 +16,6 @@ body {
 }
 img {
 	max-width: 100%;
-	max-height: calc(90vh - 40px);
 }
 h3, .flipBtn, .thumbImg, .logoMain {
 	cursor: pointer;
@@ -76,11 +75,30 @@ h3, .flipBtn, .thumbImg, .logoMain {
 }
 .showPane {
 	text-align: center;
-	height: 90vh;
+	height: calc(90vh - 40px);
 }
 .showDiv {
+	height: calc(90vh - 40px);
 	width: 100%;
 }
+#showZoomImg {
+	position: absolute;
+	text-align: center;
+	padding: 0 30px;
+} #showZoomImg img {
+	max-height: calc(90vh - 70px);
+}
+@media screen and (min-width: 1200px) {
+	.showPane {
+		height: 90vh;
+	}
+	.showDiv {
+		height: calc(90vh);
+	}
+	#showZoomImg img {
+		max-height: calc(90vh - 35px);
+	}
+}  
 #mainCover, #musicCover {
 	position: absolute;
 	padding: 0 30px;
@@ -103,12 +121,6 @@ h3, .flipBtn, .thumbImg, .logoMain {
 	background: green;
 }
 
-#showZoomImg {
-	position: absolute;
-	text-align: center;
-	height: 90vh;
-	padding: 0 30px;
-}
 
 .big4ThumbImg {
 	max-width: 50%;
@@ -143,6 +155,7 @@ h3, .flipBtn, .thumbImg, .logoMain {
 	position: absolute;
 	color: black;
 	bottom: 0;
+	left: 0;
 	font-size: 1.5em;
 	width: 100%;
 	text-align: center;
